// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCommentTimeline props timelineIcon is rendered 1`] = `
<div
  aria-label="someuser"
  class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-m-user-subdued"
  role="img"
  title="someuser"
>
  <span
    class="euiAvatar__icon"
    data-euiicon-type="dot"
  >
    someuser
  </span>
</div>
`;

exports[`EuiCommentTimeline props username is rendered 1`] = `
<div
  aria-label="someuser"
  class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-m-user-subdued"
  role="img"
  title="someuser"
>
  <span
    class="euiAvatar__icon"
    data-euiicon-type="avatar dot"
  >
    someuser
  </span>
</div>
`;
